# RubiksCube

./: CMakeLists.txt  README.md  RubicCube.sln
RubicCube/: CMakeLists.txt  Common.h  Cube.h  D3D12Resources.cpp  D3D12Resources.h  D3DApp.cpp  D3DApp.h  Entity.h  GameTimer.cpp  GameTimer.h  Geometry.cpp  Geometry.h  MathHelper.cpp  MathHelper.h  PassConstant.h  RenderObject.cpp  RenderObject.h  RenderSystem.cpp  RenderSystem.h  RubicCube.vcxproj  RubicCube.vcxproj.filters  Source.cpp  d3dUtil.cpp  d3dUtil.h  imgui.ini
RubicCube/Graphics/: Buffer.h
RubicCube/Shaders/: Common.hlsl  Default.hlsl  LightingUtils.hlsl  PixelShader.cso  PixelShader.hlsl  Sky.hlsl  VertexShader.cso  VertexShader.hlsl
RubicCube/Shaders/Raytrace/: Common.hlsl  Hit.hlsl  Miss.hlsl  RayGen.hlsl
RubicCube/Textures/: rubicPallet.dds
RubicCube/openxr/: MathLib.h  OpenXrManager.cpp  OpenXrManager.h
Sandbox/: Sandbox.cpp  Sandbox.vcxproj
